--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,14 @@ body {
   font-size: 60px;
   font-weight: 700;
   letter-spacing: 35px;
+  animation-name: moveInleft;
+  animation-duration: 5s;
+ 
+
+  /* 
+  animation-delay:3s
+  animation-iteration-count: 3;
+   */
 }
 
 .headin-primary-sub{
@@ -69,7 +77,25 @@ body {
     font-size:20px;
     font-weight: 400;
     letter-spacing: 15px;
+    
+
 }
 
+@keyframes  moveInleft{
+    0% {
+        opacity: 0;
+        transform: translateX(-100px);
+    }
+
+    80% {
+        transform: translateX(10px);
+    }
+
+    100%{
+        opacity: 1;
+        transform: translate(0);
+    }
+    
+}
 
 
