--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,6 @@ body {
 
 .logo{
  height: 35px;
-
 }
 
 .text-box {
@@ -49,11 +48,14 @@ body {
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
+    text-align: center;
 }
 
 .headin-primary{
  color: #fff;
  text-transform: uppercase;
+ backface-visibility: hidden;
+ margin-bottom: 60px;
  
 }
 
@@ -64,11 +66,10 @@ body {
   letter-spacing: 35px;
   animation-name: moveInleft;
   animation-duration: 5s;
- 
-
   /* 
   animation-delay:3s
   animation-iteration-count: 3;
+  animation-timing-function: ease-out;
    */
 }
 
@@ -77,6 +78,8 @@ body {
     font-size:20px;
     font-weight: 400;
     letter-spacing: 15px;
+    animation-name: moveInright;
+    animation-duration: 5s;
     
 
 }
@@ -97,5 +100,60 @@ body {
     }
     
 }
+
+@keyframes  moveInright{
+    0% {
+        opacity: 0;
+        transform: translateX(100px);
+    }
+
+    80% {
+        transform: translateX(-10px);
+    }
+
+    100%{
+        opacity: 1;
+        transform: translate(0);
+    }
+    
+}
+
+.btn:link,
+.btn:visited {
+    text-decoration: uppercase;
+    text-decoration: none;
+    padding: 15px 40px;
+    display: inline-block;
+    border-radius: 100px;
+    transition: all .2s;
+}
+
+.btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0,0,0,.2);
+}
+
+.btn:active {
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba(0,0,0,.2);
+}
+
+
+.btn-white{
+    background-color: #fff;
+    color: #777;
+}
+
+.btn::after {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    
+}
+
+
+
+
 
 
